@@ -1,12 +1,8 @@
 CREATE TABLE seen (
-    nick VARCHAR(20) NOT NULL,
-    "time" numeric NOT NULL,
-    channel VARCHAR(30) NOT NULL,
-    host VARCHAR(80) NOT NULL,
-    message text NOT NULL,
+   nick character varying(20) NOT NULL, 
+   "time" numeric NOT NULL, 
+   channel character varying(30) NOT NULL, 
+   host character varying(80) NOT NULL, 
+   message text NOT NULL, 
+   CONSTRAINT seen_pkey PRIMARY KEY (nick)
 ) WITHOUT OIDS;
-
-REVOKE ALL ON TABLE seen FROM PUBLIC;
-
-ALTER TABLE ONLY seen
-    ADD CONSTRAINT seen_pkey PRIMARY KEY (nick);
